--- a/app.json
+++ b/app.json
@@ -1,21 +1,17 @@
 {
-  "name": "Play-Zee5",
+  "name": "json-server-deploy",
   "version": "1.0.0",
-  "description": "so cool.",
-  "main": "ZEE.js",
+  "description": "Simple json database to deploy to the host of your choice",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "keywords": [
-    "example",
-    "heroku"
+    "json-server,heroku, node, REST API"
   ],
-  "author": "palahsu",
-  "license": "MIT",
+  "author": "p",
+  "license": "ISC",
   "dependencies": {
-    "express": "^4.9.8"
-  },
-  "engines": {
-    "node": "10.x"
+    "json-server": "^0.16.2"
   }
 }
