--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./ZEE.js"
+    "start": "ZEE.js"
   },
   "dependencies": {
   }
