--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
-    "name": "zee5",
-    "version": "1.0.0",
-    "description": "The Ultimate Zee5 Player using Cloudflare Worker",
-    "main": "ZEE.js",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/palahsu/Play-Zee5.git"
-    },
-    "keywords": [
-        "zee5"
-    ],
-    "author": "P",
-    "license": "Apache-2.0",
-    "bugs": {
-        "url": "https://github.com/palahsu/Play-Zee5/issues"
-    },
-    "homepage": "https://github.com/palahsu/Play-Zee5#readme"
+
+  "name": "download",
+
+  "description": "All in one ",
+
+  "repository": "https://github.com/palahsu/Play-Zee5",
+
+  "keywords": ["node", "express"]
+
+  
+
 }
