--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
-
-  "name": "download",
-
-  "description": "All in one bot for torrenting",
-
-  "repository": "https://github.com/palahsu/Play-Zee5",
-
-  "keywords": ["node"]
-
-  
-
+  "name": "ZEE",
+  "version": "1.0.0",
+  "description": "",
+  "main": "ZEE.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3",
+    "socket.io": "^2.1.1"
+  }
 }
