--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "ZEE5 Streamer",
     "version": "2.0.0",
     "description": "The Online ZEE5 Player and Downloader with Premium and Free Content With All Facality and Customizable Player ",
-    "main": "ZEE5.js",
+    "main": "index.html",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/palahsu/Play-Zee5.git"
