--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-    "name": "ZEE5 Streamer",
-    "version": "2.0.0",
-    "description": "The Online ZEE5 Player and Downloader with Premium and Free Content With All Facality and Customizable Player ",
-    "main": "index.html",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/palahsu/Play-Zee5.git"
-    },
-    "author": "palahsu",
-    "license": "Custom Lisence",
-    "bugs": {
-        "url": "https://github.com/palahsu/Play-Zee5/issues"
-    },
-    "homepage": "https://github.com/palahsu/Play-Zee5#readme"
+    "root": "public",
+    "clean_urls": true,
+    "https_only": true,
+    "error_page": "index.html",
+    "headers": {
+        "/**": {
+            "Access-Control-Allow-Origin": "*"
+        }
+    }
 }
